天気API導入まで

--- a/index.html
+++ b/index.html
@@ -2,10 +2,84 @@
 <html lang=“ja”>
  <head>
   <meta charset="UTF-8">
-  <title>情報基礎最終課題</title>
+
+  <title>情報基礎最終課題 ~オススメコーデ紹介しちゃうぞ！！~</title>
   <style type="index.css"></style>
- <script src=index.js></script>
+ 
+ <script src="http://ajax.googleapis.com/ajax/libs/jquery/2.0.2/jquery.min.js"></script>
+	<script src="http://cdnjs.cloudflare.com/ajax/libs/twitter-bootstrap/2.2.1/bootstrap.min.js"></script>
+	
+  <script src="js/jquery.simpleWeather.js"></script>
+    <script src="js/jquery.simpleWeather.min.js"></script>
+    <script src="js/app.js"></script>
  </head>
  <body>
- </body>
+     <form name="in">
+     <div class="ColorRadio" id="rdoSex">
+<dt>性別を選択してください</dt>
+  
+    <li><input type="radio" name="sex" id="male" /><label for="male">男性</label></li>
+    <li><input type="radio" name="sex" id="female" /><label for="female">女性</label></li>
+  
+</div>
+<br />
+<div class="ColorRadio" id="Age">
+<dt>年齢を選択してください</dt>
+  <input 
+    type="text"
+    name="age"
+    value=""
+    size="2px"
+    />歳
+</div>
+<div class="weather" id="slecweather">
+    <dt>天気を選択してください</dt>
+<select name="weather">
+<option value="summer">晴れ</option>
+<option value="cloudy">曇り</option>
+<option value="reiny">雨</option>
+<option value="snowy">雪</option>
+</select>
+</div>
+<div class="temp">
+    <dt>温度を入力してください</dt>
+    <input 
+    type="text"
+    name="temp"
+    value=""
+    size="2px"
+    />℃
+</div>
+<div class="humid">
+    <dt>湿度を入力してください</dt>
+    <input 
+    type="text"
+    name="humid"
+    value=""
+    size="2px"
+    />%
+</div>
+<div class="submit">
+    <input 
+    type="submit"
+    onclick="submit"
+    name="submit"
+    value="オススメを表示！！"
+    />
+</div>
+<div class="all">
+    <input
+    type="submit"
+    onclick="weather()"
+    name="all"
+    value="一括表示！！"
+    />
+</div>
+<div id="weather"></div>
+
+
+
+
+</form>
+</body>
 </html>
